--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+alps (1:20220304~r7871-1) unstable; urgency=low
+
+  * New upstream snapshot (20220304~r7871)
+
+ -- Synge Todo <wistaria@phys.s.u-tokyo.ac.jp>  Sat, 05 Mar 2022 00:18:10 +0900
+
 alps (1:20210720~r7867-1) unstable; urgency=low
 
   * New upstream snapshot (20210720~r7867)
